src/test/ui/simd-intrinsic/simd-intrinsic-generic-select.stderr
error[E0511]: invalid monomorphization of `simd_select` intrinsic: mismatched lengths: mask length `8` != other vector length `4`
  --> $DIR/simd-intrinsic-generic-select.rs:48:9
   |
LL |         simd_select(m8, x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_select` intrinsic: mask element type is `u32`, expected `i_`
  --> $DIR/simd-intrinsic-generic-select.rs:51:9
   |
LL |         simd_select(x, x, x);
   |         ^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_select` intrinsic: mask element type is `f32`, expected `i_`
  --> $DIR/simd-intrinsic-generic-select.rs:54:9
   |
LL |         simd_select(z, z, z);
   |         ^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_select_bitmask` intrinsic: mismatched lengths: mask length `8` != other vector length `4`
  --> $DIR/simd-intrinsic-generic-select.rs:57:9
   |
LL |         simd_select_bitmask(0u8, x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_select_bitmask` intrinsic: `f32` is not an integral type
  --> $DIR/simd-intrinsic-generic-select.rs:60:9
   |
LL |         simd_select_bitmask(0.0f32, x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_select_bitmask` intrinsic: `&str` is not an integral type
  --> $DIR/simd-intrinsic-generic-select.rs:63:9
   |
LL |         simd_select_bitmask("x", x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0511`.
